#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_psana
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-06-01
2014-01-07 Andy Salnikov
- regenerate whole thing from psddldata V01-00-01 with psddl V00-13-02

Tag: V00-06-00
2013-12-22 Andy Salnikov
- regenerate whole thing from psddldata V01-00-00 with psddl V00-13-00

Tag: V00-05-08
2013-12-19 Andy Salnikov
- regenerate whole thing from psddldata V00-04-56
- new epix package

Tag: V00-05-07
2013-12-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-54

Tag: V00-05-06
2013-12-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-53
- new type Evr::SrcConfigV1

Tag: V00-05-05
2013-11-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-50
- new epixsampler package

Tag: V00-05-04
2013-11-12 Andy Salnikov
- small improvement to ddl_* scripts

Tag: V00-05-03
2013-11-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-47 with psddl V00-12-04
- new rayonix package
- ipimb.Config types have new method

Tag: V00-05-02
2013-10-02 Andy Salnikov
- regenerate whole thing from psddldata V00-04-45 with psddl V00-08-18

Tag: V00-05-01
2013-09-24 Andy Salnikov
- regenerate whole thing from psddldata V00-04-38 with psddl V00-08-16

Tag: V00-05-00
2013-09-24 Andy Salnikov
- regenerate whole thing from psddldata V00-04-38 with psddl V00-08-15
- new Alias stuff
- new BldDataEBeamV4 and BldDataAcqADCV1 types
- couple of new methods in old classes

Tag: V00-04-31
2013-09-17 Andy Salnikov
- documentation generation changed in SConsTools, updating SConscript

Tag: V00-04-30
2013-08-26 Andy Salnikov
- regenerate whole thing from psddldata V00-04-32 with psddl V00-08-12

Tag: V00-04-29
2013-08-26 Andy Salnikov