@@ -1,0 +1,17 @@
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <cstddef>
+#include "psddl_psana/partition.ddl.h"
+#include <iostream>
+namespace Psana {
+namespace Partition {
+Source::Source(const Pds::Src& arg__src, uint32_t arg__group)
+    : _src(arg__src), _group(arg__group)
+{
+}
+
+ConfigV1::~ConfigV1() {}
+
+} // namespace Partition
+} // namespace Psana
